Add functionality to load app config

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
   <!-- Internal -->
   <link href="css/style.css" rel="stylesheet">
+  <script src="config.js"></script>
   <script src="bundle.js"></script>
 </head>
 
