--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <!-- Internal -->
   <link href="css/style.css" rel="stylesheet">
   <script src="config.js"></script>
-  <script src="bundle.js"></script>
+  <script src="bundle.min.js"></script>
 </head>
 
 <body ng-app="sths.frontend" ng-cloak>
