--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,12 @@
 
 <head>
   <!-- External styles and icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/angular-material.css" rel="stylesheet">
-  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Internal -->
   <link href="css/style.css" rel="stylesheet">
   <script src="config.js"></script>
-  <script src="bundle.min.js"></script>
+  <script src="bundle.js"></script>
 </head>
 
 <body ng-app="sths.frontend" ng-cloak>
