--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
 </head>
 
 <body ng-app="sths.frontend" ng-cloak>
-  <app-header></app-header>
+  <app-menu></app-menu>
   <ng-view></ng-view>
 </body>
