--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- External styles and icons -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/loaders.min.css" rel="stylesheet">
 
   <!-- Internal -->
   <link href="css/style.css" rel="stylesheet">
