Add strict DI and fix minification
- minified bundle should reduce page load by something like 75%

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
   <!-- Internal -->
   <link href="css/style.css" rel="stylesheet">
   <script src="config.js"></script>
-  <script src="bundle.js"></script>
+  <script src="bundle.min.js"></script>
 </head>
 
-<body ng-app="sths.frontend" ng-cloak>
+<body ng-app="sths.frontend" ng-strict-di ng-cloak>
   <app-menu></app-menu>
   <ng-view></ng-view>
 </body>
