--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link href="css/style.css" rel="stylesheet">
   <script src="config.js"></script>
   <script src="bundle.min.js"></script>
+
+  <title>Stanchion Hockey League</title>
 </head>
 
 <body ng-app="sths.frontend" ng-strict-di ng-cloak>
