Basic cache busting

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Internal -->
-  <link href="css/style.css" rel="stylesheet">
-  <script src="config.js"></script>
-  <script src="bundle.min.js"></script>
+  <link href="css/style.css?version=1.0" rel="stylesheet">
+  <script src="config.js?version=1.0"></script>
+  <script src="bundle.js?version=1.0"></script>
 
   <title>Stanchion Hockey League</title>
 </head>
