--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,23 @@
   <script src="config.js?version=1.0"></script>
   <script src="bundle.js?version=1.0"></script>
 
+  <script>window.twttr = (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0],
+      t = window.twttr || {};
+    if (d.getElementById(id)) return t;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "https://platform.twitter.com/widgets.js";
+    fjs.parentNode.insertBefore(js, fjs);
+
+    t._e = [];
+    t.ready = function(f) {
+      t._e.push(f);
+    };
+
+    return t;
+  }(document, "script", "twitter-wjs"));</script>
+
   <title>Stanchion Hockey League</title>
 </head>
 
