--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <html lang="en" >
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- External styles and icons -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
