Improve URLs for info pages

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <base href="/">
 
   <!-- External styles and icons -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
